--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/resposive.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Itim&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Dely - Kem thuần chay</title>
 </head>
 <body >
@@ -113,35 +114,94 @@
     <!-- Product -->
      <div class="product">
         <div class="contain">
-            <h2 class="product__heading">sản phẩm đặc trưng</h2>
+            <h2 class="product__heading">SẢN PHẨM ĐẶC TRƯNG</h2>
             <p class="product__desc">Dely đã thêm vào danh sách các món kem mà mình phục vụ dòng kem Vegan – 100% thuần chay với việc thay thế sữa động vật thành sữa hạt nguyên chất đi cùng với những nguyên liệu tươi ngon</p>
             <div class="product__list">
                 <div class="product__item">
+                  <div class="product__frame">
                     <img src="./assets/img/product-1.jpg" alt="" class="product__img">
+                  </div>
                     <p class="product__name"> Kem Blueberry</p>
                     <div class="product__buy-block">
-                        <p class="product__price"></p>
-                        <a href="" class="btn product__btn">Mua hàng</a>
+                        <p class="product__price">400.000 đ</p>
+                        <a href="" class="btn product__btn">
+                          <span class="cart-icon">🛒</span> 
+                         <span class="btn-text">Mua hàng</span>
+                        </a>
                     </div>
                 </div>
                 <div class="product__item">
+                  <div class="product__frame">
                     <img src="./assets/img/product-2.jpg" alt="" class="product__img">
+                  </div>
                     <p class="product__name"> Kem Raspberry</p>
                     <div class="product__buy-block">
-                        <p class="product__price"></p>
-                        <a href="" class="btn product__btn">Mua hàng</a>
+                        <p class="product__price">300.000đ</p>
+                        <a href="" class="btn product__btn">
+                          <span class="cart-icon">🛒</span> 
+                         <span class="btn-text">Mua hàng</span>
+                        </a>
                     </div>
                 </div>
                 <div class="product__item">
+                  <div class="product__frame">
                     <img src="./assets/img/product-3.jpg" alt="" class="product__img">
+                  </div>
                     <p class="product__name"> Kem Avocado</p>
                     <div class="product__buy-block">
-                        <p class="product__price"></p>
-                        <a href="" class="btn product__btn">Mua hàng</a>
+                        <p class="product__price">200.000 đ</p>
+                        <a href="" class="btn product__btn">
+                          <span class="cart-icon">🛒</span> 
+                         <span class="btn-text">Mua hàng</span>
+                        </a>
                     </div>
                 </div>
-            </div>
+              </div>
+              <div class=" product__view">
+                <a class="product__view-desc">Xem thêm</a>
+              </div>
         </div>
+     </div>
+     <!-- Blog -->
+     <div class="blog">
+      <div class="contain">
+        <h2 class="blog__heading">NHỮNG CHIA SẺ</h2>
+        <div class="blog__list">
+          <div class="blog__item">
+            <img src="./assets/img/blog-01.jpg" alt="" class="blog__img">
+            <a class="blog__name">Nguồn gốc của món kem</a>
+            <p class="blog__desc line-clamp">Kem đã có nguồn gốc từ rất lâu đời với cách chế biến đơn giản nhưng lại làm nức nòng những người sảnh ăn thời bấy giờ. Kem, cream hay creme trong nhiều nền văn hóa là một món...</p>
+          </div>
+          <div class="blog__item">
+            <img src="./assets/img/blog-02.jpg" alt="" class="blog__img">
+            <a class="blog__name">Top 10 vị kem được ưa chuộng nhất tại Mỹ</a>
+            <p class="blog__desc">Trong khi vị kem Vani đang giữ vị trí quán quân cho một thời gian đã khá nhiều năm, theo một báo cáo gần đây của Hội ẩm thực quốc tế (IDFA) đã công bố rằng có thể vị Vani sẽ không...</p>
+          </div>
+          <div class="blog__item">
+            <div class="blog__desc">
+              <img src="./assets/img/blog-01.jpg" alt="" class="blog__desc-img">
+              <div class="blog__desc-block">
+                <a href="" class="blog__desc-heading">Nguồn gốc của món kem</a>
+                <p class="blog__desc-sub">Kem là một trong những loại thực phẩm hằng ngày</p>
+              </div>
+            </div>
+            <div class="blog__desc">
+              <img src="./assets/img/blog-02.jpg" alt="" class="blog__desc-img">
+              <div class="blog__desc-block">
+                <a href="" class="blog__desc-heading">Nguồn gốc của món kem</a>
+                <p class="blog__desc-sub">Kem là một trong những loại thực phẩm hằng ngày</p>
+              </div>
+            </div>
+            <div class="blog__desc">
+              <img src="./assets/img/blog-02.jpg" alt="" class="blog__desc-img">
+              <div class="blog__desc-block">
+                <a href="" class="blog__desc-heading">Nguồn gốc của món kem</a>
+                <p class="blog__desc-sub">Kem là một trong những loại thực phẩm hằng ngày</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
      </div>
 </body>
 </html>
